--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-Hello World!
+<!DOCTYPE html>
+<!--[if lt IE 7]> <html lang="en" class="lt-ie10 lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>    <html lang="en" class="lt-ie10 lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>    <html lang="en" class="lt-ie10 lt-ie9"> <![endif]-->
+<!--[if IE 9]>    <html lang="en" class="lt-ie10"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class=""> <!--<![endif]-->
+<head>
+	<meta charset="utf-8">
+	<title>Tim Christie</title>
+	<meta name="description" content="">
+	<meta name="author" href="humans.txt">
+	<meta name="canonical" href="">
+
+	<!-- App meta -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+	<!-- Favicon -->
+	<link rel="shortcut icon" href="favicon.ico">
+
+	<!-- Google Web Fonts -->
+	<!--link href="//fonts.googleapis.com/css?family=Scada:400,700" rel="stylesheet"-->
+
+	<!-- Cascading Style Sheets -->
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+
+	<!-- Polyfills -->
+	<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
+
+	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!--[if lt IE 9]>
+	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+	<![endif]-->
+</head>
+<body>
+	<div class="container">
+
+		<header class="row">
+
+		</header>
+
+		<main class="row">
+			<div class="col-sm-12">
+
+				<p>Hello world</p>
+
+			</div>
+		</main>
+
+		<footer class="row">
+
+		</footer>
+
+	</div>
+
+	<!-- 3rd-party Scripts -->
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
+	<!-- Application Scripts -->
+</body>
+</html>
