Added custom font

--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
 	<link rel="shortcut icon" href="favicon.ico">
 
 	<!-- Google Web Fonts -->
-	<!--link href="//fonts.googleapis.com/css?family=Scada:400,700" rel="stylesheet"-->
+	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Fredericka+the+Great">
 
 	<!-- Cascading Style Sheets -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+	<style>
+	h1 {
+		font-family: 'Fredericka the Great', cursive;
+	}
+	</style>
 
 	<!-- Polyfills -->
 	<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
