--- a/404.html
+++ b/404.html
@@ -137,7 +137,7 @@
         circlegithub
     </a>
     
-    <a class="symbol" href="https://www.linkedin.com/in/timschristie">
+    <a class="symbol" href="https://www.linkedin.com/in/tim-christie">
         circlelinkedin
     </a>
     
