--- a/about/index.html
+++ b/about/index.html
@@ -95,7 +95,7 @@
         circlegithub
     </a>
     
-    <a class="symbol" href="https://www.linkedin.com/in/timschristie">
+    <a class="symbol" href="https://www.linkedin.com/in/tim-christie">
         circlelinkedin
     </a>
     
